コメントアウトの追加

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -95,6 +95,7 @@
 //             <% for (let i = 0; i < bodyParser.length; i++) { %>
 //     <%= nameTitle.innerHTML = bodyParser[i].name %><br />
 // <% } %>
+// こんにちは
         </script>
     </body>
 </html>
