バリデーションテェック追加

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,6 +13,8 @@
                 <th id="dereteTitle">削除</th>
             </tr>
         </table>
+
+        <p><a href="/create">ユーザーの追加</a></p>
         <!--こちらに基礎課題で言われてる内容を記述しましょう。ここから-->
         <p id="textTag"></p>
         <p id="textText"></p>
